--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.uts.andy.RegSystem">
+    package="com.uts.iamjinqianyu.RegSystem">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".view.AdminActivity"
+            android:name="com.uts.iamjinqianyu.RegSystem.view.AdminActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".view.EntryActivity"
+            android:name="com.uts.iamjinqianyu.RegSystem.view.EntryActivity"
             android:label="@string/title_activity_entry"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -27,17 +27,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".view.StudentActivity"
+            android:name="com.uts.iamjinqianyu.RegSystem.view.StudentActivity"
             android:label="@string/title_activity_student"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".view.ClassEditActivity"
+            android:name="com.uts.iamjinqianyu.RegSystem.view.ClassEditActivity"
             android:label="@string/title_activity_class_edit"
-            android:parentActivityName=".view.AdminActivity"
+            android:parentActivityName="com.uts.iamjinqianyu.RegSystem.view.AdminActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.uts.andy.RegSystem.view.AdminActivity" />
+                android:value="com.uts.iamjinqianyu.RegSystem.view.AdminActivity" />
         </activity>
     </application>
 
