--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.uts.iamjinqianyu.RegSystem">
+    package="com.uts.iamjinqianyu.regSystem">
 
     <application
         android:allowBackup="true"
@@ -9,15 +9,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.uts.iamjinqianyu.RegSystem.view.AdminActivity"
+            android:name=".view.AdminActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
         </activity>
         <activity
-            android:name="com.uts.iamjinqianyu.RegSystem.view.EntryActivity"
+            android:name=".view.EntryActivity"
             android:label="@string/title_activity_entry"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -27,18 +24,31 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.uts.iamjinqianyu.RegSystem.view.StudentActivity"
+            android:name=".view.StudentActivity"
             android:label="@string/title_activity_student"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.uts.iamjinqianyu.RegSystem.view.ClassEditActivity"
+            android:name=".view.ClassEditActivity"
             android:label="@string/title_activity_class_edit"
-            android:parentActivityName="com.uts.iamjinqianyu.RegSystem.view.AdminActivity"
+            android:parentActivityName=".view.AdminActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.uts.iamjinqianyu.RegSystem.view.AdminActivity" />
+                android:value="com.uts.iamjinqianyu.regSystem.view.AdminActivity" />
         </activity>
+        <activity
+            android:name=".view.UserEditActivity"
+            android:label="@string/title_activity_user_edit"
+            android:parentActivityName=".view.AdminActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.uts.iamjinqianyu.regSystem.view.AdminActivity" />
+        </activity>
+        <activity
+            android:name=".view.ClassDetailActivity"
+            android:label="@string/title_activity_class_detail"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
