--- a/SEP/app/build.gradle
+++ b/SEP/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -29,7 +29,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.0.4'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:26.0.0-alpha1'
-
+    compile 'joda-time:joda-time:2.9.9'
 }
 
 
